--- a/Project.toml
+++ b/Project.toml
@@ -4,28 +4,17 @@ BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
-Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
-ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
-EvalMetrics = "251d5f9e-10c1-4699-ba24-e0ad168fa3e4"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuBox = "33c16bc7-715f-4b5e-ac98-9a87e2edc099"
-KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
-Permutations = "2ae35dd2-176d-5d53-8349-f30d82d94d4f"
-PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
-RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
-RedefStructs = "91f8d46f-6a72-421b-a56e-b73459bd5e0a"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Survival = "8a913413-2070-5976-9d4c-2b364fdc2f7f"
-SurvivalAnalysis = "d1dd7d07-e5c2-418a-8652-e20add45d312"
+SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TSne = "24678dba-d5e9-5843-a4c6-250288b04835"
 UMAP = "c4f8c510-2410-5be4-91d7-4fbaeb39457e"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
+cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
