--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
@@ -12,7 +13,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuBox = "33c16bc7-715f-4b5e-ac98-9a87e2edc099"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
-SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 TSne = "24678dba-d5e9-5843-a4c6-250288b04835"
 UMAP = "c4f8c510-2410-5be4-91d7-4fbaeb39457e"
